Fixed dotdotdot text being shown before it is truncated and hidden

--- a/airbitz/airbitz/static/less/global-stylesheet.less
+++ b/airbitz/airbitz/static/less/global-stylesheet.less
@@ -15,7 +15,6 @@
 @import url("https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css");
 
 
-
 body {
     margin: 0;
     padding-top: 75px;
@@ -23,6 +22,11 @@ body {
 
     .top-bg {
         z-index: -1;
+        -webkit-animation: fadein 3s; /* Safari and Chrome */
+           -moz-animation: fadein 3s; /* Firefox */
+            -ms-animation: fadein 3s; /* Internet Explorer */
+             -o-animation: fadein 3s; /* Opera */
+                animation: fadein 3s;
 
         @media(min-width: @screen-md) {
             position: absolute;
@@ -41,6 +45,11 @@ body {
         background: rgba(255,255,255,.7);
         .box-shadow(0 0 0 2px white);
         .border-top-radius(5px);
+        -webkit-animation: fadein 2s; /* Safari and Chrome */
+           -moz-animation: fadein 2s; /* Firefox */
+            -ms-animation: fadein 2s; /* Internet Explorer */
+             -o-animation: fadein 2s; /* Opera */
+                animation: fadein 2s;
     }
 } // body
 
@@ -87,6 +96,22 @@ body {
 
 
 
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; visibility: visible; }
+}
+
+/* Firefox */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; visibility: visible; }
+}
+
+/* Safari and Chrome */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; visibility: visible; }
+}
 
 
 
